--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Exchange Currency</title>
   </head>
   <body>
-    <img src="/img/money.png" alt="" />
+    <img src="./img/money.png" alt="" />
     <h1>Exchange Currency</h1>
     <p>chose the currency and amounts to get the exchange rate</p>
 
